# corporate-actions-demo

./: .gitignore  DEMO_GUIDE.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: events.py  system.py
backend/app/core/: config.py  database.py
backend/app/models/: event.py
backend/app/schemas/: event.py
backend/app/services/: event_processor.py  event_service.py
backend/tests/: conftest.py  test_api.py
frontend/: .gitignore  index.html  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: EventForm.jsx  EventList.jsx  MetricsDashboard.jsx
frontend/src/services/: api.js
kubernetes/: deployment.yaml
roadmap/: PRODUCT_ROADMAP.md
scripts/: create-sample-data.sh  deploy.sh  setup-github.sh
